Bug 439475 Crash [@ConvertToCard] when deleting card/mailing list from Mac OS X Address Book and Thunderbird Address Book is open. r/sr=bienvenu